# agtx

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  PLAN-mcp-server.md  README.md  flake.nix  install.sh  llms-full.txt
.agtx/: execute.md  review.md
.claude/: settings.local.json
.claude-plugin/: plugin.json
.claude/commands/: add-plugin.md  evaluate-workflow.md
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/swebench/: benchmark.py  cleanup.sh  pyproject.toml  requirements.txt
commands/: sweep.md
plugins/agent-skills/: plugin.toml
plugins/agtx/: plugin.toml
plugins/agtx-terse/: plugin.toml
plugins/bmad/: plugin.toml
plugins/gsd/: plugin.toml
plugins/oh-my-claudecode/: plugin.toml
plugins/omc/: plugin.toml
plugins/spec-kit/: plugin.toml
plugins/superpowers/: plugin.toml
plugins/void/: plugin.toml
skills/: plan.md  research.md
skills/agtx/: SKILL.md
skills/sweep/: SKILL.md
src/: lib.rs  main.rs  operations.rs  skills.rs
src/agent/: mod.rs  operations.rs
src/config/: mod.rs
src/db/: models.rs  schema.rs
src/git/: jj_operations.rs  mod.rs  operations.rs  provider.rs  worktree.rs
src/mcp/: mod.rs  server.rs
src/tmux/: mod.rs  operations.rs
src/tui/: app.rs  app_tests.rs  board.rs  input.rs  mod.rs  shell_popup.rs  (+1 more)
tests/: agent_tests.rs  board_tests.rs  config_tests.rs  db_tests.rs  git_operations_tests.rs  git_tests.rs  jj_tests.rs  mcp_tests.rs  mock_infrastructure_tests.rs  shell_popup_tests.rs  status_detection_tests.rs  tmux_operations_tests.rs  workflow_operations_tests.rs
(+36 files in other folders)
